# installer-toolbox

./: .gitignore  README.md
crates/sfx-instant-package/: Cargo.toml
crates/sfx-instant-package/src/: main.rs
crates/sfx-ll/: Cargo.toml
crates/sfx-ll/src/: common.rs  embedder.rs  extractor.rs  lib.rs  main.rs
crates/sfx-zip/: Cargo.toml
crates/sfx-zip/src/: lib.rs  main.rs  zip_fns.rs
crates/zipper/: Cargo.toml
crates/zipper/src/: main.rs
